--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 ---
 
-<Layout title='Control Home - Seguridad e innovación para tu hogar'>
+<Layout title='Control Home - Seguridad e innovación para tu hogar' client:load>
 	<Header />
 </Layout>
