--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Carousel from "../components/Carousel.astro";
 ---
 
-<Layout title='Control Home - Seguridad e innovación para tu hogar' client:load>
-	<Header />
+<Layout title="Control Home - Seguridad e innovación para tu hogar" client:load>
+  <Header />
+  <Carousel />
 </Layout>
