--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header>
-  <img src="/iconControl.jpg" class="picture" />
+  <img src="/iconControl.jpg" class="picture" alt="icon Control Home"/>
   <div class="container_text">
     <h1 class="title">Control Home</h1>
     <span class="eslogan">Seguridad e innovación para tu hogar</span>
@@ -39,14 +39,14 @@
       mobileMenu?.classList.add("active");
       mobileMenu?.classList.remove("closing");
       menuIcon.style.marginTop = "-400px";
-      closeButton?.classList.remove('btn_hidden')
+      closeButton?.classList.remove("btn_hidden");
     });
 
     closeButton?.addEventListener("click", () => {
       mobileMenu?.classList.add("closing");
       if (!menuIcon) return;
       menuIcon.style.marginTop = "0";
-      closeButton.classList.add('btn_hidden')
+      closeButton.classList.add("btn_hidden");
     });
 
     mobileMenu?.addEventListener("transitionend", () => {
@@ -106,14 +106,15 @@
     right: 0;
     width: 0;
     height: 100%;
-    background: #016fb9e1;
+    background: #016fb9ec;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     clip-path: circle(0% at 100% 0%);
-    transition: clip-path 0.5s ease-in-out;
+    transition: clip-path 0.4s ease-in-out;
     padding-top: 200px;
+    z-index: 300;
   }
 
   .mobile_menu.active {
@@ -136,6 +137,7 @@
 
   .mobile_menu nav ul li a {
     color: #fff;
+    font-weight: bold;
     font-size: 24px;
     text-decoration: none;
   }
@@ -152,7 +154,11 @@
   }
 
   .btn_hidden {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition:
+      opacity 0.3s ease-in-out,
+      visibility 0.5s ease-in-out;
   }
 
   .mobile_menu.active {
