--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Carousel from "../components/Carousel.astro";
+import MainInformation from "../components/MainInformation.astro";
+import Banner from "../components/Banner.astro";
 ---
 
-<Layout title="Control Home - Seguridad e innovación para tu hogar" client:load>
+<Layout title="Control Home - Seguridad e innovación para tu hogar">
   <Header />
   <Carousel />
+  <MainInformation />
+  <Banner />
+  <p>1</p>
 </Layout>
