--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,23 +1,28 @@
 <div class="banner">Expertos en:</div>
-<div class="image-container">
+<div class="container-images">
+  <div class="image-container">
     <p class="text-image">Venta de equipos</p>
-    <img src="/expertoVentas.jpg" alt="experto en ventas">
-</div>
-<div class="bar-bottom"></div>
-<div class="image-container">
+    <img src="/expertoVentas.jpg" alt="experto en ventas" />
+  </div>
+  <div class="bar-bottom"></div>
+  <div class="image-container">
     <p class="text-image">Instalación</p>
-    <img src="/expertoInstalacion.jpg" alt="experto en instalaciones">
-</div>
-<div class="bar-bottom"></div>
-<div class="image-container">
+    <img src="/expertoInstalacion.jpg" alt="experto en instalaciones" />
+  </div>
+  <div class="bar-bottom"></div>
+  <div class="image-container">
     <p class="text-image">Mantenimiento</p>
-    <img src="/expertoMantenimiento.jpg" alt="experto en mantenimientos">
+    <img src="/expertoMantenimiento.jpg" alt="experto en mantenimientos" />
+  </div>
 </div>
 <div class="bar-bottom"></div>
 
 <style>
-    img {
-    width: 100%;}
+  img {
+    width: 100%;
+    object-fit: none;
+    zoom: 1.5;
+  }
 
   .banner {
     padding: 15px 0;
@@ -29,22 +34,22 @@
     margin-top: 30px;
   }
 
-.image-container {
+  .image-container {
     position: relative;
     display: flex;
-}
+  }
 
-.image-container::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(55, 176, 197, 0.308); /* Azul con 40% de opacidad */
-}
+  .image-container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(55, 176, 197, 0.308);
+  }
 
-.text-image {
+  .text-image {
     position: absolute;
     color: #fff;
     font-weight: bold;
@@ -53,18 +58,34 @@
     text-align: center;
     align-self: center;
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
-}
+  }
 
   .bar-bottom {
     padding: 15px;
-    background: #329FD7;
+    background: #329fd7;
     margin-top: -15px;
- }
+  }
+
+  @media (min-width: 610px) {
+    .container-images {
+      display: flex;
+      justify-content: center;
+    }
+
+    .text-image {
+      font-size: 17px;
+    }
+
+    .bar-bottom {
+      display: none;
+    }
+  }
 
   @media (min-width: 924px) {
     .banner {
       margin-top: 100px;
     }
+  }
 
   @media (min-width: 924px) {
     .banner {
@@ -78,22 +99,22 @@
   }
   @media (min-width: 1429px) {
     .banner {
-        margin-top: 170px;
+      margin-top: 170px;
     }
   }
   @media (min-width: 1459px) {
     .banner {
-        margin-top: 190px;
+      margin-top: 190px;
     }
   }
   @media (min-width: 1493px) {
     .banner {
-        margin-top: 220px;
+      margin-top: 220px;
     }
   }
   @media (min-width: 1910px) {
     .banner {
-        margin-top: 40px;
+      margin-top: 40px;
     }
   }
 </style>
